fix: mobile overflow

--- a/_sass/media-queries.scss
+++ b/_sass/media-queries.scss
@@ -160,6 +160,7 @@
       width: 80%;
       max-width: none;
       margin: 0 auto;
+      overflow-x: hidden;
     }
 
     .content-wrapper__inner {
